# uwrt_software_training

./: README.md
software_training_assignment/: CMakeLists.txt  package.xml
software_training_assignment/action/: moving_turt.action
software_training_assignment/include/software_training_assignment/: circles.hpp  clear_turts.hpp  reset_turts.hpp  spawn_turts.hpp
software_training_assignment/launch/: software_training_launch.py
software_training_assignment/msg/: software.msg
software_training_assignment/src/: circle_turt.cpp  reset_turt.cpp  spawn_turts.cpp
